feat: add transparent checkpoint 2 routing
